<resources>
    <string name="app_name">饭团密画</string>
    <string name="tab_home">首页</string>
    <string name="tab_mall">市场</string>
    <string name="tab_purchased_miner">创作者</string>
    <string name="tab_assets">盲盒</string>
    <string name="tab_mine">我的</string>
    <string name="edit_hint">请输入关键字搜索作品</string>
    <string name="parameter_error">请求参数错误，请稍候重试</string>
    <string name="artist">作品</string>
    <string name="mine_acount">区块链积分：%1$s</string>
    <string name="centify_addr">证书地址：%1$s</string>
    <string name="sign_amounts">交易次数：%1$s次</string>
    <string name="create_amount">发行份数：%1$s份</string>
    <string name="text_contain_royalty">(含版税:￥%1$s)</string>
    <string name="royalty_rate">版税比例：%1$s</string>
    <string name="royalty">版税</string>
    <string name="royalty_date">版税有效期：%1$s</string>
    <string name="royalty_rate_value">(%1$s)</string>
    <string name="centify_time">签名时间：%1$s</string>
    <string name="sign_cost">签名费用：%1$s</string>
    <string name="sign_amount">已签名：%1$s</string>
    <string name="count_power">积分权益</string>
    <string name="picture_size">尺寸：%1$s</string>
    <string name="picture_caizhi">材质：%1$s</string>
    <string name="forget_psw">忘记密码？</string>
    <string name="picture_cailiao">材料：%1$s</string>
    <string name="picture_type">作品类型：%1$s</string>
    <string name="upload_img">上传作品</string>
    <string name="explore_page">浏览器</string>
    <string name="picture_creator">创作者：%1$s</string>
    <string name="picture_owner">拥有者：%1$s</string>
    <string name="picture_time">创作时间：%1$s</string>
    <string name="last_amount_">(剩余%1$s)</string>
    <string name="order_sell">实收款:</string>
    <string name="order_bought">实付款:</string>
    <string name="derive_with_keystore">Keystore</string>
    <string name="derive_with_qrcode">二维码</string>
    <string name="derive_keystore_title">导出Keystore</string>
    <string name="set_key_store_psw">设置KeyStore密码</string>
    <string name="sign_certify">签名证书</string>
    <string name="import_wallet">导入钱包</string>
    <string name="derive_keystore_tip_title">离线保存</string>
    <string name="derive_keystore_tip_title4">仅供直接扫描</string>
    <string name="derive_keystore_tip4">二维码禁止保存、截图、以及拍照、仅供用户在安全环境下直接扫描来方便的导入钱包。</string>
    <string name="derive_keystore_tip_title5">在安全环境下使用</string>
    <string name="derive_keystore_tip5">请在确保四周无人及无摄像头的情况下使用。二维码一旦被人获取将造成不可挽回的资产损失。</string>
    <string name="derive_keystore_tip">请复制粘贴Keystore文件到安全、离线的地方保存。切勿保存至邮箱、记事本、网盘、聊天工具等，非常危险</string>
    <string name="derive_keystore_tip_title2">请勿使用网络传输</string>
    <string name="derive_private_key_copy_btn">复制</string>
    <string name="derive_private_key_already_copy_btn">已复制</string>
    <string name="sign_img">证书照片</string>
    <string name="sign_amountss">签名数</string>
    <string name="progress_loading">加载中...</string>
    <string name="text_input_amount_null_tips">请设置本次出售价格</string>
    <string name="blind_box_transfering_tips">链上NFT数据正在传输，请稍后再试！</string>
    <string name="blind_box_failed_tips">链上NFT数据传输失败，已付款将原路退回，请注意查收</string>
    <string name="sign_company">签名机构</string>
    <string name="picture_name_link">《%1$s》</string>
    <string name="wallet_add">钱包地址：%1$s</string>
    <string name="mine_sign">我的签名作品</string>
    <string name="apply_certify">申请证书</string>
    <string name="input_centify_addr">请输入证书地址</string>
    <string name="apply_add_certify">申请加签</string>
    <string name="select_sign_company">选择机构增加签名</string>
    <string name="show_more">全部作品</string>
    <string name="net_word_error">网络连接异常，请检查网络</string>
    <string name="request_error">请求失败，请稍候重试</string>
    <string name="reponse_error">服务器返回错误，请稍候重试</string>
    <string name="version_install">立即更新</string>
    <string name="select_art_hint">请选择需要签名的作品</string>
    <string name="double_click_exit">再次点击返回键退出</string>
    <string name="next">下一步</string>
    <string name="start_match">开始对比</string>
    <string name="id_card_1">身份证人像面</string>
    <string name="id_card_2">身份证国徽面</string>
    <string name="select_pics">选择作品</string>
    <string name="qukuai">区块链信息</string>
    <string name="picture_profile">创作者张大中在作品《水墨》系列中以“梅花”作为自己某种观念或隐喻的象征，山林中的梅花不再有寒冷的感觉，红热的梅花体现出了烈焰灼烧的意味，这也代表了创作者心中某种热烈的情感需要爆发。生活只有遵循内心的想法才会精彩，真实从心的想法才会是第一顺位。</string>
    <string name="go_creator_page">进入创作者主页</string>
    <string name="up_id_img">请拍摄以下证件照片,注意避免证件反光</string>
    <string name="version_download_ing">下载中...</string>
    <string name="version_download_error">下载失败</string>
    <string name="version_error">您所下载的APP解析错误，请重新下载更新</string>
    <string name="dialog_title">操作提示</string>
    <string name="version_update">立即更新</string>
    <string name="version_download_progress">正在下载更新</string>
    <string name="permissions_alert">请在系统设置-应用管理-权限管理设置-允许%1$s</string>
    <string name="canel">取消</string>
    <string name="canel_follow">取消关注</string>
    <string name="determine">确定</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="edit_wallet">编辑钱包</string>
    <string name="user_agreement">隐私协议</string>
    <string name="login_txt">登陆</string>
    <string name="register_txt">注册</string>
    <string name="hint_phone">手机号</string>
    <string name="hint_psw">密码</string>
    <string name="text_follow">关注</string>
    <string name="text_follow_success">关注成功</string>
    <string name="text_cancle_follow_success">取消关注成功</string>
    <string name="no_order_sn">未找到订单编号</string>
    <string name="copy_order_sn">订单编号已编制</string>
    <string name="register_hint_phone">手机号</string>
    <string name="register_hint_psw">请输入6-18位数字与祖母组合</string>
    <string name="register_hint_code">请输入验证码</string>
    <string name="register_currently_code">请输入正确验证码</string>
    <string name="register_txt_code">获取验证码</string>
    <string name="input_current_phone_no">请输入正确的手机号</string>
    <string name="please_input_phone_no">请输入手机号</string>
    <string name="sort">分类</string>
    <string name="thpe_theme">主题</string>
    <string name="type">类型</string>
    <string name="prize">价格</string>
    <string name="new_goods">最新上架</string>
    <string name="sort_prize">价格排序</string>
    <string name="send_success">已发送</string>
    <string name="derive_private_key_alert">安全警告：私钥未经加密，导出存在风险，建议使用助记词和keystore进行备份</string>
    <string name="mnemonic_backup_alert_title">请勿截图</string>
    <string name="input_your_pin">请输入密码</string>
    <string name="back_up_mnemonic_title">备份助记词</string>
    <string name="input_your_pin_again">请再次输入密码</string>
    <string name="error_pin">密码错误</string>
    <string name="correct_pin">密码正确</string>
    <string name="set_pin_complete">密码设置完成</string>
    <string name="pin_not_complare">两次密码不一致</string>
    <string name="certify_search">证书查询</string>
    <string name="certify_search_find">查询</string>
    <string name="certify_apply">申请证书</string>
    <string name="count_bage">积分钱包</string>
    <string name="count_point">积分</string>
    <string name="point_profile">积分说明</string>
    <string name="hot">热门原创</string>
    <string name="auction">限时拍卖</string>
    <string name="theme">主题推荐/THEME</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="bind_success">绑定成功</string>
    <string name="auction_time_start">距开始%1$s</string>
    <string name="auction_time_end">距结束%1$s</string>
    <string name="buy_in">买入订单</string>
    <string name="sell_out">卖出订单</string>
    <string name="message">消息</string>
    <string name="all_read_message">全部已读</string>
    <string name="service">客服</string>
    <string name="my_page">我的主页</string>
    <string name="upgrade_art">上传作品</string>
    <string name="add">收货地址</string>
    <string name="send">发起拍卖</string>
    <string name="advice">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="register_user_Agreement">同意《用户协议》</string>
    <string name="cusomer_service">客服</string>
    <string name="lianxi_type">请通过以下方式联系我们</string>
    <string name="actual_name">真实姓名</string>
    <string name="hint_input_actual_name">请输入姓名</string>
    <string name="id_number">证件号码</string>
    <string name="hint_input_id_number">请输入证件号</string>
    <string name="physical_authentication">实人认证</string>
    <string name="my_collect_title">作品收藏</string>
    <string name="follw_title">关注的人</string>
    <string name="sell_title">卖出订单</string>
    <string name="buy_title">买入订单</string>
    <string name="fans_title">粉丝</string>
    <string name="start_physical_authentication">开始认证</string>
    <string name="hint_please_input_id_info">请先填写身份信息</string>
    <string name="hint_id_number_illegal">身份证号不合法，请重新输入</string>
    <string name="hint_certification_must_be_over_18_years_old">认证需大于18周岁</string>
    <string name="hint_liveness_verify_failed">认证失败，请稍候重试</string>
    <string name="hint_get_verify_info_error">获取认证信息失败，请重新进行人脸认证</string>
    <string name="hint_pleast_upload_self_id_cards">请上传 %1$s 本人身份证</string>
    <string name="hint_id_has_expired">身份证已过期，请上传有效身份证件</string>
    <string name="creator">创作者</string>
    <string name="creator_profile">创作者简介</string>
    <string name="platform_push">平台推荐</string>
    <string name="after_push">往期平台推荐</string>
    <string name="after_artist_push">往期平台推荐</string>
    <string name="art_info">作品信息</string>
    <string name="art_appreciation">艺术品评析</string>
    <string name="art_detail">艺术品细节</string>
    <string name="add_cart">加入购物车</string>
    <string name="buy_now">立即购买</string>
    <string name="go_pay">去支付</string>
    <string name="organ_profile">机构简介</string>
    <string name="organ_detail">机构详情</string>
    <string name="link_search">链查询</string>
    <string name="already_up">已上架</string>
    <string name="ever_up">未上架</string>
    <string name="my_buy_in">我买入的</string>
    <string name="my_sell_out">我卖出的</string>
    <string name="no_display_name">未设置昵称</string>
    <string name="settings">设置</string>
    <string name="head_img">头像</string>
    <string name="nick_name">昵称</string>
    <string name="desc">描述</string>
    <string name="phone">手机号</string>
    <string name="wechat">微信</string>
    <string name="blind_box_pay">支付</string>
    <string name="login_psw">登录密码</string>
    <string name="true_man_certify">实人认证</string>
    <string name="alipay_certify">支付宝实名认证</string>
    <string name="verifi_tips">为了您的账户安全，请完成一下认证</string>
    <string name="go_certify">去认证</string>
    <string name="certified">已认证</string>
    <string name="i_see">我知道了</string>
    <string name="quite_login">退出登陆</string>
    <string name="title_sell">出售</string>
    <string name="cancle_sell">下架</string>
    <string name="text_call_service">联系客服</string>
    <string name="text_downloading">正在下载...</string>
    <string name="text_download_success">下载完成</string>
    <string name="text_sell_tips">检测到您已提交挂单申请。饭团密画现处于公测阶段，订单成交后，请联系客服，提交自己的手机号码、钱包地址、和订单号申请提现。公测结束后会上线自动提现功能，饭团密画感谢您的支持。</string>
    <string name="balance_zero_tips">当前积分为0，无法进行操作\n（购买NFT卡片可获得积分）</string>
    <string name="confirm_tips">请选择作品后确认</string>
    <string-array name="my_page_tabs">

        <item>持有的NFT</item>
        <item>出售的NFT</item>
        <item>拍卖的NFT</item>

    </string-array>
    <string-array name="cut_amount">
        <item>10份</item>
        <item>100份</item>
        <item>1000份</item>
        <item>10000份</item>
    </string-array>
    <string-array name="popular">
        <item>油画</item>
        <item>水彩</item>
        <item>国画</item>
        <item>速写</item>
        <item>简笔</item>
        <item>抽象</item>
        <item>现代</item>
        <item>简笔</item>
        <item>抽象</item>
        <item>现代</item>
    </string-array>
    <string-array name="mine_actions">
        <item>我的主页</item>
        <item>上传作品</item>
        <item>买入订单</item>
        <item>卖出订单</item>
        <item>拍卖纪录</item>>
        <item>作品收藏</item>
        <item>兑换NFT</item>
        <item>消息</item>
    </string-array>
    <string-array name="my_sign">
        <item>买入订单</item>
        <item>卖出订单</item>
    </string-array>
    <string name="prompt_email">Email</string>
</resources>