<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_home_selector"
        android:title="@string/tab_home" />

    <item
        android:id="@+id/navigation_art_sort"
        android:icon="@drawable/icon_mail_selector"
        android:title="@string/tab_mall" />

    <item
        android:id="@+id/navigation_creator"
        android:icon="@drawable/icon_miner_selector"
        android:title="@string/tab_purchased_miner" />

    <item
        android:id="@+id/navigation_find"
        android:icon="@drawable/icon_find_selector"
        android:title="@string/tab_find" />

    <item
        android:id="@+id/navigation_mine"
        android:icon="@drawable/icon_mine_selector"
        android:title="@string/tab_mine" />

</menu>
