<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar"
                layout="@layout/layout_toolbar_common" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_weight="1"
                    android:background="@drawable/shape_input_bg_black">

                    <ImageView
                        android:id="@+id/scan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:padding="@dimen/dp_15"
                        android:src="@mipmap/icon_scan" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/scan"
                        android:background="@null"
                        android:hint="@string/input_centify_addr"
                        android:maxLines="1"
                        android:paddingLeft="@dimen/dp_5"
                        android:paddingTop="@dimen/dp_15"
                        android:paddingBottom="@dimen/dp_15"
                        android:textSize="@dimen/sp_16" />
                </RelativeLayout>

                <Button
                    android:id="@+id/applyAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginRight="@dimen/dp_15"
                    android:background="@drawable/shape_sign_blue"
                    android:text="@string/certify_search_find"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_18" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@color/_F6F6F6"
                android:paddingBottom="@dimen/dp_20">

                <TextView
                    android:id="@+id/picture_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_toRightOf="@+id/img_small"
                    android:text="@string/picture_name_link"
                    android:textColor="@color/picture_name_color"
                    android:textSize="@dimen/sp_17" />

                <TextView
                    android:id="@+id/picture_material"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/picture_name"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_toRightOf="@+id/img_small"
                    android:text="@string/picture_cailiao"
                    android:textColor="@color/_606060"
                    android:textSize="@dimen/sp_15" />

                <TextView
                    android:id="@+id/picture_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/picture_material"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_toRightOf="@+id/img_small"
                    android:text="@string/picture_size"
                    android:textColor="@color/_606060"
                    android:textSize="@dimen/sp_15" />


                <TextView
                    android:id="@+id/picture_creator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/picture_size"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_toRightOf="@+id/img_small"
                    android:drawablePadding="@dimen/dp_10"
                    android:text="@string/picture_creator"
                    android:textColor="@color/_606060"
                    android:textSize="@dimen/sp_15" />

                <TextView
                    android:id="@+id/creat_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/picture_creator"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_toRightOf="@+id/img_small"
                    android:text="@string/picture_owner"
                    android:textColor="@color/_606060"
                    android:textSize="@dimen/sp_15" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:background="@color/gray_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_20"
                android:background="@color/_F6F6F6"
                android:paddingBottom="@dimen/dp_20">

                <TextView
                    android:id="@+id/sign_certify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_toRightOf="@+id/img_small"
                    android:text="@string/sign_certify"
                    android:textColor="@color/picture_name_color"
                    android:textSize="@dimen/sp_17" />

                <TextView
                    android:id="@+id/certify_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sign_certify"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_toRightOf="@+id/img_small"
                    android:text="@string/sign_img"
                    android:textColor="@color/_606060"
                    android:textSize="@dimen/sp_15" />

                <TextView
                    android:id="@+id/certify_addr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/certify_img"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_toRightOf="@+id/img_small"
                    android:text="@string/centify_addr"
                    android:textColor="@color/_606060"
                    android:textSize="@dimen/sp_15" />


                <TextView
                    android:id="@+id/sign_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/certify_addr"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_toRightOf="@+id/img_small"
                    android:drawablePadding="@dimen/dp_10"
                    android:text="@string/sign_amountss"
                    android:textColor="@color/_606060"
                    android:textSize="@dimen/sp_15" />

                <TextView
                    android:id="@+id/sign_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sign_amount"
                    android:layout_marginTop="@dimen/dp_20"
                    android:layout_toRightOf="@+id/img_small"
                    android:text="@string/sign_company"
                    android:textColor="@color/_606060"
                    android:textSize="@dimen/sp_15" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:background="@color/gray_line" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>