<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_default_white"
    android:paddingLeft="19dp"
    android:paddingTop="24dp"
    android:paddingRight="19dp"
    android:paddingBottom="19dp">

    <TextView
        android:id="@+id/tv_complete_certification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:text="@string/verifi_tips"
        android:textColor="@color/auth_text_color"
        android:textSize="@dimen/sp_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:drawableLeft="@mipmap/two_step_auth"
        android:drawablePadding="4dp"
        android:text="@string/true_man_certify"
        android:textColor="@color/_333333"
        android:textSize="@dimen/sp_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_complete_certification" />

    <TextView
        android:id="@+id/tv_two_part_verifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:background="@drawable/rounded_rect_theme_blue_big_radius"
        android:paddingLeft="16dp"
        android:paddingTop="5dp"
        android:paddingRight="16dp"
        android:paddingBottom="5dp"
        android:text="@string/go_certify"
        android:textColor="@color/_FFFFFF"
        android:textSize="@dimen/sp_15"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_complete_certification" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:drawableLeft="@mipmap/real_name_auth"
        android:drawablePadding="4dp"
        android:text="@string/alipay_certify"
        android:textColor="@color/_333333"
        android:textSize="@dimen/sp_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_two_part_verifi" />

    <TextView
        android:id="@+id/tv_real_name_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:background="@drawable/rounded_rect_theme_blue_big_radius"
        android:paddingLeft="16dp"
        android:paddingTop="5dp"
        android:paddingRight="16dp"
        android:paddingBottom="5dp"
        android:text="@string/go_certify"
        android:textColor="@color/_FFFFFF"
        android:textSize="@dimen/sp_15"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_two_part_verifi" />

    <View
        android:id="@+id/v_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="25dp"
        android:background="@color/_E6E6E6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_real_name_auth" />

    <TextView
        android:id="@+id/tv_i_see"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:text="@string/i_see"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_line" />

</androidx.constraintlayout.widget.ConstraintLayout>